# square_pylib

./: LICENSE  README.md  pyproject.toml
figures/: __init__.py  base.py  circle.py  triangle.py
src/square/: main.py
tests/: figures_test.py
