[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "square"
version = "0.0.1"
authors = [
 { name="elstds", email="elst_dev@mail.ru" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/elstds/square_pylib"