[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "square"
version = "0.0.1"
authors = [
 { name="elstds", email="elst_dev@mail.ru" },
]
description = "A library for calculating the areas of geometric figures"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/elstds/square_pylib"
